Reduce width on contact cards, font-weight in place holder, reduce space between card blue and white, orthographic correction, place holder vertical align center in text area, padding top and bottom in blue container of info

--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -69,11 +69,15 @@
   height: 100vh;
   min-height: 550px;
   display: grid;
-  grid-template-columns: 5% 90% 5%;
-  grid-template-rows: 10% 5% 70% 5% 10%;
+  grid-template-columns: 10% 5% 70% 5% 10%;
+  grid-template-rows: 10% 5% 70% 5% 5% 5%;
   margin:  0 10%;
+  @media screen and (max-width: 870px){
+    grid-template-columns: 5% 10% 70% 10% 5%;
+  }
   @media screen and (max-width: 720px){
     height: 200vh;
+    grid-template-rows: 5% 10% 70% 5% 5% 5%;
   }
 }
 .box{
@@ -82,8 +86,8 @@
 }
 #blueBox{
   background-color: $primary;
-  grid-column: 1/3;
-  grid-row: 2/4;
+  grid-column: 2/4;
+  grid-row: 2/5;
   -webkit-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.4);
   -o-box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.4);
   -moz-box-shadow: 1.5px 1.5px 1px 1.5px rgba(0,0,0,0.4);
@@ -94,16 +98,26 @@
   justify-content: space-around;
   align-items: center;
   min-height: 410px;
+  @media screen and (min-width: 870px){
+
+  }
 }
 #whiteShadow{
+  width: 98%;
   background-color: #fff;
-  grid-column: 2/4;
-  grid-row: 3/5;
+  grid-column: 3/5;
+  grid-row: 3/6;
   border: 0.5px solid #bbb;
   -webkit-box-shadow: 3px 3px 5px 3px #bbb;
   -o-box-shadow: 3px 3px 5px 3px #bbb;
   -moz-box-shadow: 3px 3px 5px 3px #bbb;
   box-shadow: 3px 3px 5px 3px #bbb;
+  @media screen and (max-width: 720px){
+    grid-row: 2/6;
+    margin-top: 5%;
+    height: 95%;
+    width: 95%;
+  }
 }
 
 #blueBox > p{
@@ -191,7 +205,7 @@
 }
 #contentTextArea > textarea{
     &:invalid{
-      width: 98%;
+      width: 80%;
       height: 20%;
       border: none;
       border-radius: 7px;
@@ -200,9 +214,14 @@
       resize: none;
       font-size: 1.2em;
       overflow: hidden;
+      @media screen and (max-width: 1244px){
+        height: 25%;
+      }
       @media screen and (max-width: 1000px){
-        width: 95%;
-        height: 28%;
+        height: 30%;
+      }
+      @media screen and (max-width: 720px){
+        height: 15%;
       }
     }
     &:valid{
@@ -218,18 +237,22 @@
 }
 ::-webkit-input-placeholder {
  text-align: center;
+ font-weight: 600;
 }
 
 :-moz-placeholder { /* Firefox 18- */
  text-align: center;
+ font-weight: 600;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
  text-align: center;
+ font-weight: 600;
 }
 
 :-ms-input-placeholder {
  text-align: center;
+ font-weight: 600;
 }
 #blueBox > button{
   min-width: 20%;
@@ -241,4 +264,7 @@
   background-color: $white;
   border-radius: 50px;
   border: none;
+  @media screen and (max-width: 720px){
+    min-width: 90%;
+  }
 }
