--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -163,6 +163,7 @@
   min-height: 100vh;
   @media screen and (max-width: 720px){
     flex-direction: column;
+    padding: 40px 10%;
   }
 }
 .weHaveServices > p{
@@ -300,16 +301,16 @@
   color: $primary;
 }
 .weAreDesc > img{
-  width: 20%;
+  width: 15%;
   margin: 10px 5vw;
   @media screen and (max-width: 1100px){
     width: 20%;
   }
   @media screen and (max-width: 720px){
-    width: 50%;
+    width: 30%;
   }
   @media screen and (max-width: 600px){
-    width: 50%;
+    width: 30%;
   }
 }
 
